--- a/html/contact.html
+++ b/html/contact.html
@@ -8,15 +8,45 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="../css/bootstrap.css">
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
+        <link rel="stylesheet" href="../css/normalize.css">
+        <link rel="stylesheet" href="../css/main.css">
 
         <script src="https://use.fontawesome.com/40917ba2bf.js"></script>
     </head>
+
     <body>
-      <div class="contact-us">
+      <header>
+        <nav id="nav" class="navbar navbar-inverse bg-inverse navbar-toggleable-md navbar-light bg-faded">
+          <h1 id="titre" class="navbar-brand">Street <br>forme</h1>
+          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="tarif.html">Tarif</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a></li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Nos Coach</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="#">Paul</a>
+                <a class="dropdown-item" href="#">chris</a>
+                <a class="dropdown-item" href="#">Nadine</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+  </header>
+
+      <main>
+        <div class="contact-us">
      <div class="container">
         <div class="contact-form">
          <div class="row">
@@ -27,14 +57,14 @@
                           <div class="row">
                               <div class="col-md-6">
                                   <div class="form-group">
-                                      <label for="form_name">Firstname *</label>
+                                      <label for="form_name">Nom *</label>
                                       <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
                                       <div class="help-block with-errors"></div>
                                   </div>
                               </div>
                               <div class="col-md-6">
                                   <div class="form-group">
-                                      <label for="form_lastname">Lastname *</label>
+                                      <label for="form_lastname">Prénom *</label>
                                       <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
                                       <div class="help-block with-errors"></div>
                                   </div>
@@ -50,7 +80,7 @@
                               </div>
                               <div class="col-md-6">
                                   <div class="form-group">
-                                      <label for="form_phone">Phone*</label>
+                                      <label for="form_phone">téléphone*</label>
                                       <input id="form_phone" type="tel" name="phone"  class="form-control" placeholder="Please enter your phone*" required oninvalid="setCustomValidity('Plz enter your correct phone number ')"
   onchange="try{setCustomValidity('')}catch(e){}">
 
@@ -83,10 +113,10 @@
              <div class="col-sm-5">
                  <div class="row col1">
                      <div class="col-xs-3">
-                         <i class="fa fa-map-marker" style="font-size:16px;"></i>   Address
+                         <i class="fa fa-map-marker" style="font-size:16px;"></i>   Adresse
                      </div>
                      <div class="col-xs-9">
-                          One Gateway Center, Suite 25500+,<br> Newark 23, NJ 10235
+                          21/23 rue Maracci,<br> 59800 lille
                      </div>
                  </div>
 
@@ -95,7 +125,7 @@
                           <i class="fa fa-phone"></i>   Phone
                       </div>
                       <div class="col-sm-9">
-                           +(91) 123 277 4239
+                           06 84 22 05 33
                       </div>
                   </div>
                   <div class="row col1">
@@ -103,7 +133,7 @@
                            <i class="fa fa-fax"></i>    Fax
                       </div>
                       <div class="col-sm-9">
-                            123 123 4567
+                            03 22 55 66 99
                       </div>
                   </div>
                   <div class="row col1">
@@ -111,12 +141,62 @@
                           <i class="fa fa-envelope"></i>   Email
                       </div>
                       <div class="col-sm-9">
-                           <a href="mailto:info@yourdomain.com">info@yourdomain.com</a> <br> <a href="mailto:support@yourdomain.com">support@yourdomain.com</a>
+                           <a href="mailto:info@yourdomain.com">c.dehondt@live.com</a> <br> <a href="mailto:support@yourdomain.com">support@yourdomain.com</a>
                       </div>
                   </div><br>
-                  <iframe width="100%" height="230" frameborder="0" style="border-radius:0px;" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.in/maps?client=firefox-a&ie=UTF8&q=ethane+web+technologies&fb=1&gl=in&hq=ethane+web+technologies&cid=8183905562449910042&t=m&ll=28.639225,77.390442&spn=0.052731,0.154495&z=13&iwloc=A&output=embed"  style="border-radius:20px;"></iframe>
+                  <iframe class="plan" src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d2528.4632885159413!2d3.191529787905811!3d50.67422491464251!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x47c3287cffc4751f%3A0x5a28c76910a7ac19!2sRue+L%C3%A9on+Marlot%2C+59100+Roubaix!3m2!1d50.6745666!2d3.1917399!5e0!3m2!1sfr!2sfr!4v1490867155914" width="100%" height="350" style="border:0" allowfullscreen></iframe>
              </div>
          </div>
 
+        </div>
+     </div>
+ </div>
+
+
+       </main>
+       <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+       <footer>
+           <div class="footer" id="footer">
+               <div class="container">
+                   <div class="row">
+                       <div class="col-lg-4  col-md-2 col-sm-4 col-xs-6">
+                           <h3> Tarifs </h3>
+                           <ul>
+                               <li> <a href="#">Abonnement 12 mois</a> </li>
+                               <li> <a href="#">Abonnement 6 mois</a> </li>
+                               <li> <a href="#">Abonnement 3 mois</a> </li>
+                               <li> <a href="#">Abonnement 1 mois</a> </li>
+                           </ul>
+                       </div>
+                       <div class="col-lg-4  col-md-2 col-sm-4 col-xs-6">
+                           <h3> coach</h3>
+                           <ul>
+                               <li> <a href="#">Paul</a> </li>
+                               <li> <a href="#">Chris</a> </li>
+                               <li> <a href="#">Nadine</a> </li>
+                           </ul>
+                       </div>
+                       <div class="col-lg-4  col-md-3 col-sm-6 col-xs-12 ">
+                           <h3>Contact</h3>
+                           <ul>
+                               <li>
+                                   <div class="input-append newsletter-box text-center">
+                                       <input type="text" class="full text-center" placeholder="Email ">
+                                       <button class="btn  bg-gray" type="button"> je vous réponds<i class="fa fa-long-arrow-right"> </i> </button>
+                                   </div>
+                               </li>
+                           </ul>
+                           <ul class="social">
+                               <li> <a href="#"> <i class=" fa fa-facebook">   </i> </a> </li>
+                               <li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>
+                               <li> <a href="#"> <i class="fa fa-google-plus">   </i> </a> </li>
+                               <li> <a href="#"> <i class="fa fa-pinterest">   </i> </a> </li>
+                               <li> <a href="#"> <i class="fa fa-youtube">   </i> </a> </li>
+                           </ul>
+                       </div>
+                   </div>
+                   <!--/.row-->
+               </div>
+               <!--/.container-->
     </body>
     </html>
