all: Html code finishing and css project coach sportif

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="fr">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -110,7 +110,7 @@
                 <p>Si vous reprenez le sport après une période d’arrêt, votre corps a besoin de retrouver le goût de l’effort.
                     Cet objectif vous fera gagner en souplesse, renforcera vos muscles et vous apprendrez à vous étirer en toute sécurité.
                     Essayez-vous au Stretching, Yoga, Pilates, Gym Ball, Yog’in, Barre au sol ou encore Fitness fight.</p>
-                <a href="html/tarif.html"class="btn btn-lg btn-white-outline"><i class="fa fa-clone left"></i> Je me tonifie!</a>
+                <a href="html/tarif.html" class="btn btn-lg btn-white-outline"><i class="fa fa-clone left"></i> Je me tonifie!</a>
               </div>
             </div>
           </div>
@@ -129,6 +129,7 @@
 
     <section  class="card card-inverse  hidden-lg-down">
       <img class="card-img" src="img/pc/B11.jpg" alt="Card image">
+
       <div class="card-img-overlay">
         <h2 class="card-title">VOS Objectif sportif</h2>
         <p class="card-text">En plus,on vous propose de choisir un objectif principal ainsi qu’un objectif secondaire
@@ -136,6 +137,7 @@
           ou vous assouplir et vous tonifier c’est vous qui choisissez !énéficiez de 15 jours offerts pour tester !</p>
         </p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
 
         <!-- ********************************modal pour info tarif*******************************************
         ********************************************************************************************* -->
@@ -199,11 +201,12 @@
                     </div>
                   </blockquote>
                 </div>
+              </div>
 
 
 <!-- *******************************************1 mois*******************************
 ***************************************************************************************************** -->
-              </div>
+
               <div class="card card-inverse card-warning mb-3 text-center">
                 <div class="card-block">
                   <blockquote class="card-blockquote">
@@ -216,10 +219,8 @@
                     </div>
                   </blockquote>
                 </div>
+            </div>
 
-
-
-          </div>
         </div>
 
 <!-- ******************************************************demander une information****************************
@@ -246,16 +247,18 @@
                   </div>
                 </form>
               </div>
+
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-primary">Send message</button>
               </div>
+
             </div>
           </div>
         </div>
       </div>
-      </div>
-    </section>
+    </div>
+  </section>
 
 <!--
 ***************************************les coachs*****************************************************************
@@ -314,22 +317,27 @@
               <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                   <div class="modal-content">
+
                     <div class="modal-header">
                       <h5 class="modal-title" id="exampleModalLongTitle">Je prends rendez-vous</h5>
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                       </button>
                     </div>
+
                     <div class="modal-body">
                       <iframe src="https://calendar.google.com/calendar/embed?showNav=0&amp;showPrint=0&amp;showTabs=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=c.dehondt%40live.com&amp;color=%231B887A&amp;ctz=Europe%2FParis" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
                     </div>
+
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                       <button type="button" class="btn btn-primary">Save changes</button>
                     </div>
+
                   </div>
                 </div>
-              </div>
+
+            </div>
           </div>
         </div>
 
