--- a/html/contact.html
+++ b/html/contact.html
@@ -26,11 +26,11 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a></li>
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a></li>
             <li class="nav-item">
-              <a class="nav-link" href="tarif.html">Tarif</a></li>
+              <a class="nav-link" href="html/tarif.html">Tarif</a></li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a></li>
+              <a class="nav-link" href="html/contact.html">Contact</a></li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Nos Coach</a>
@@ -45,7 +45,7 @@
       </nav>
   </header>
 
-      <main>
+      <main id="contact">
         <div class="contact-us">
      <div class="container">
         <div class="contact-form">
